kubernetes/llm/components/oikb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oikb
  namespace: llm
  labels:
    app.kubernetes.io/name: oikb
    app.kubernetes.io/instance: oikb
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: oikb
